# chemtoolsmcp

./: .gitignore  CLAUDE.md  README.md  chemtools_tool.py  pyproject.toml
chem-agent-package/: README.md
chemtools/: README.md  __init__.py  _api_utils.py  api.py  api_basis.py  api_input.py  api_output.py  api_runner.py  api_strategy.py  basis.py  case_schema.json  case_template.json  common.py  cube.py  diagnostics.py  eval.py  molcas.py  molpro.py  nwchem.py  nwchem_docs.py  nwchem_forum.py  nwchem_freq.py  nwchem_input.py  nwchem_mos.py  nwchem_tasks.py  nwchem_tce.py  openwebui_tool_examples.py  protocols.py  registry.py  runner.py  runner_profiles.example.json  runner_profiles.example.yaml  runner_profiles.local.example.json
nwchemaitest-2/: 2026-04-05-182508-run-nwchem-with-and-opt-and-freq-of-fecl3-create.txt  AGENTS.md  CLAUDE.md  fecl3_b3lyp_m2_search.nw  fecl3_b3lyp_m2_search.out  fecl3_b3lyp_m4_search.nw  fecl3_b3lyp_m4_search.out  fecl3_b3lyp_m6_from_mcscf.nw  fecl3_b3lyp_m6_from_mcscf.out  fecl3_b3lyp_optfreq_test.b  fecl3_b3lyp_optfreq_test.b^-1  fecl3_b3lyp_optfreq_test.cphf_rhs  fecl3_b3lyp_optfreq_test.cphf_sol  fecl3_b3lyp_optfreq_test.drv.hess  fecl3_b3lyp_optfreq_test.fd_ddipole  fecl3_b3lyp_optfreq_test.hess  fecl3_b3lyp_optfreq_test.nmode  fecl3_b3lyp_optfreq_test.nw  fecl3_b3lyp_optfreq_test.out  fecl3_b3lyp_optfreq_test.p  fecl3_b3lyp_statefix.nw  fecl3_b3lyp_statefix.out  fecl3_b3lyp_statefix_prop.nw  fecl3_beckehandh_m6.nw  fecl3_beckehandh_m6.out  fecl3_bhandhlyp_m6.b  fecl3_bhandhlyp_m6.err  fecl3_bhandhlyp_m6.nw  fecl3_bhandhlyp_m6.out  (+55 more)
(+1024 files in other folders)
